tests/build/impl_ui_node_macro/fail/delegate_iter_not_iter_methods_children_iter.rs
use zero_ui::core::{impl_ui_node, UiNode};

struct NoIterMethods;

struct MyNode {
    children: NoIterMethods,
}

#[impl_ui_node(children_iter)]
impl UiNode for MyNode {}

fn main() {}
