tests/build/impl_ui_node_macro/fail/delegate_iter_not_iter_methods_children_iter.stderr
error[E0599]: no method named `iter_mut` found for struct `NoIterMethods` in the current scope
 --> $DIR/delegate_iter_not_iter_methods_children_iter.rs:9:16
  |
3 | struct NoIterMethods;
  | --------------------- method `iter_mut` not found for this
...
9 | #[impl_ui_node(children_iter)]
  |                ^^^^^^^^^^^^^ method not found in `NoIterMethods`

error[E0599]: no method named `iter` found for struct `NoIterMethods` in the current scope
 --> $DIR/delegate_iter_not_iter_methods_children_iter.rs:9:16
  |
3 | struct NoIterMethods;
  | --------------------- method `iter` not found for this
...
9 | #[impl_ui_node(children_iter)]
  |                ^^^^^^^^^^^^^ method not found in `NoIterMethods`
